Change Log

vD4.8.0 20170726 SCL
- RAPI $SO 0 0 disables temperature checking
vD4.7.2 20170725 SCL
- when setting charge/time limit via RAPI, display would not update lightning or clock icon
	
vD4.7.1 20170725 SCL
- fix bug in Service Level menu.. + sign would shift when AUTOSVCLEVEL enabled
	
vD4.7.0 20170504 SCL
- version number was wrong.. update from D4.6.1 -> D4.7.0
- doesn't make any difference, but improve readability
	Adafruit_TMP007::readObjTempC10() was returning NAN instead of 0
	when sensor not installed. Change to return 0
	
vD4.7.0 20170124 SCL
- check for proper tokenCnt $FB & $FP
- add RAPI $F0 - enable/display LCD update
	
vD4.6.0 20170119 SCL
- get rid of superfluous loopcnt arg in ReadPilot()
- fix problem with AUTH_LOCK - Tesla didn't like PWM when locked. Turn
	off PWM when locked
- added AUTH_LOCK_REG code - for hardware auth lock via hardware pin
- added RAPI $G0 - get EV connect state

vD4.5.1 20161214 SCL
- minor #ifdef code cleanup
- fix bug in service level menu when AUTOSVCLEVEL not defined
	
vD4.5.1 20161213 SCL
- fix broken watchdog when compiling with AVR 1.6.10+. optimizer was
	eliminating wdt_init(), so we add "used" attribute to it
- Adafruit_TMP007.cpp - fix 1.6.10+ compiler warning
- turn on RAPI_SEQUENCE_ID by default
- compile with AVR board support 1.6.10+ from now on to save 2K+ code space
	if using an older compiler and output is too big,
	disable RAPI_SEQUENCE_ID
	
20161212 SCL
- fix compile errors when GFI not defined
- fix compile errors when AUTH_LOCK && !RAPI
- protect some AMMETER code
	
vD4.5.0 20161209 SCL	
- added STATE_TRANSITION_REQ_FUNC #ifdef
- added AUTOSVCLEVEL #ifdef
- heavily revamped RAPI code
  - fix RAPI_I2C lock up issue
  - add RAPI sender & sequence id support
  when RAPI_SEQUENCE_ID is enabled, an optional sequence ID may be inserted
	into RAPI commands. The corresponding RAPI response will echo the
	sequence ID, making it possible to determine the origin of each