@@ -37,7 +37,7 @@
 #else
 #include "WProgram.h" // shouldn't need this but arduino sometimes messes up and puts inside an #ifdef
 #endif // ARDUINO
-#define VERSION "D4.7.2"
+#define VERSION "D4.8.0"
 
 #include "Language_default.h"   //Default language should always be included as bottom layer
 
